--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
-	"singleQuote": true,
-	"tabWidth": 2,
-	"arrowParens": "avoid",
-	"trailingComma": "es5"
+  "semi": true,
+  "singleQuote": true,
+  "arrowParens": "avoid",
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "trailingComma": "es5"
 }
