--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "allowJs": true,
-    "baseUrl": "../node_modules",
+    "target": "es5",
+    "lib": ["es5", "dom"],
     "types": ["cypress"]
   },
-  "include": ["**/*.*"]
+  "include": ["**/*.ts", "plugins/index.js"]
 }
