--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
-	"name": "cypress-e2e-project",
-	"version": "1.0.0",
-	"description": "End to end automation project with Cypress",
-	"main": "index.js",
-	"scripts": {
-		"cy:open": "cypress open",
-		"cy:run": "cypress run"
-	},
-	"keywords": [
-		"cypress",
-		"e2e"
-	],
-	"author": "Alex Gherman",
-	"license": "ISC",
-	"dependencies": {
-		"cypress": "^9.6.1",
-		"prettier": "^2.6.2"
-	}
+  "name": "cypress-e2e-project",
+  "version": "1.0.0",
+  "description": "End to end automation project with Cypress",
+  "main": "index.js",
+  "scripts": {
+    "cy:open": "cypress open",
+    "cy:run:chrome": "cypress run --browser chrome",
+    "cy:run:firefox": "cypress run --browser firefox",
+    "cy:run:electron": "cypres run --browser electron",
+    "cy:update-snapshots": "cypress run --env updateSnapshots=true",
+    "cy:run-dashboard": "cypress run --browser chrome --record --key c06241da-97e0-46f5-91b2-020f0a2104be"
+  },
+  "keywords": [
+    "cypress",
+    "e2e"
+  ],
+  "author": "Alex Gherman",
+  "license": "ISC",
+  "dependencies": {
+    "cypress": "^9.6.1",
+    "cypress-cucumber-preprocessor": "^4.3.1",
+    "cypress-mochawesome-reporter": "^3.1.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
+  },
+  "devDependencies": {
+    "cypress-image-snapshot": "^4.0.1"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
+  }
 }
