--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -4,5 +4,5 @@
     "lib": ["es5", "dom"],
     "types": ["cypress"]
   },
-  "include": ["**/*.ts", "plugins/index.js"]
+  "include": ["**/*.ts", "plugins/index.js", "integration/cucumber-tests/login/loginSteps.ts", "integration/common/common.js"]
 }
