--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^9.6.1",
-    "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-mochawesome-reporter": "^3.1.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
+    "@types/cypress-cucumber-preprocessor": "^4.0.1",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-image-snapshot": "^4.0.1"
   },
   "cypress-cucumber-preprocessor": {
